crates/store/re_chunk_store/tests/snapshots/dataframe__schema_static_columns-2.snap
---
source: crates/store/re_chunk_store/tests/dataframe.rs
expression: static_only
snapshot_kind: text
---
[
    "baz",
    "foo",
    "yak",
]
