crates/store/re_chunk_store/tests/snapshots/dataframe__schema_static_columns-3.snap
---
source: crates/store/re_chunk_store/tests/dataframe.rs
expression: non_static_only
snapshot_kind: text
---
[
    "example.MyPoints:points",
]
