crates/store/re_chunk_store/tests/snapshots/dataframe__schema_static_columns.snap
---
source: crates/store/re_chunk_store/tests/dataframe.rs
expression: both_static_and_non_static
snapshot_kind: text
---
[
    "baz",
    "foo",
    "yak",
    "example.MyPoints:points",
]
